src/styles/components/_home.scss
* {
    ::selection {
        background-color: $color-primary;
        color: $color-background;

        ::-moz-selection {
            background-color: $color-primary;
            color: $color-background;
        }
    }
}

html {
    height: auto;
    overflow-x: hidden;
    width: 100%;
}

body {
    height: auto;
    width: 100%;
    margin: 0;
    overflow-x: hidden;
    font-family: $mono;
    -webkit-font-smoothing: antialiased;
    font-smoothing: antialiased;
    color: $color-primary;
}

a {
    text-decoration: none;
    background-repeat: no-repeat;
    background-image: -webkit-gradient(linear,
        left top,
        left bottom,
        color-stop(65%, transparent),
        color-stop(0, white));
    background-image: linear-gradient(180deg, transparent 55%, $color-hover 0);
    -webkit-transition: background-size 0.25s ease;
    transition: background-size 0.25s ease;
    background-size: 0% 100%;
    border-bottom: 1px solid $color-primary;

    &:hover {
        cursor: pointer;
        background-size: 100% 100%;
        background-image: -webkit-gradient(linear,
            left top,
            left bottom,
            color-stop(65%, transparent),
            color-stop(0, white));
        background-image: linear-gradient(180deg, transparent 55%, $color-hover 0);
    }
}

.about {
    &--text {
        color: $color-primary;
        font-style: normal;
        font-weight: normal;
        font-size: 2.25rem;
        line-height: 200%;
    }
    &--intro {
        font-style: normal;
        font-weight: bold;
        font-size: 7rem;
        line-height: 8.375rem;
        /* identical to box height */
        letter-spacing: -0.005em;
        padding-bottom: 2rem;
    }
}

.projectListing {
    &--project-title {
        font-size: 3rem;
        line-height: 4rem;
        letter-spacing: 0.005em;
        padding-bottom: 1.5rem;
    }
    &--project-text {
        font-style: normal;
        font-weight: 600;
        font-size: 2rem;
        line-height: 180%;
    }
    &--title {
        font-size: 4.5rem;
        line-height: 6rem;
        font-weight: bold;;
        /* identical to box height */
        letter-spacing: 0.005em;
        padding-bottom: 4rem;
    }
}

.wrapper {
    overflow-x: hidden;
}

section {
    max-width: 780px;
    width: 100%;
    margin: 0 auto;
    padding: 5rem 2rem;
}

header {
    max-width: 780px;
    width: 100%;
    margin: 0 auto;
    padding: 3rem 2rem;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    font-size: 3rem;
}

.intro {
    h1 {
        font-weight: bold;
    }

    h2 {
        margin-bottom: 0;
    }

    #magic {
        white-space: nowrap;
    }
}

.grid-list {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;

    ul {
        list-style: none;
        padding: 0;
        margin: 0;
        width: 50%;

        li {
            line-height: 1.5em;
        }

        li.list-header {
            margin-bottom: 1em;
        }
    }
}

.projects {
    a {
        border-bottom: none !important;
    }

    &.grid {
        display: grid !important;
        grid-template-columns: repeat(3, 1fr);
        align-items: stretch;

        .projectListing--title {
            grid-column: 1 / -1;
        }

        .grid__col {
            display: flex;
            width: auto !important;
        }

        @media screen and (max-width: $md) {
            grid-template-columns: repeat(2, 1fr);
        }

        @media screen and (max-width: $xs) {
            grid-template-columns: 1fr;
        }
    }
}

.project {
    flex: 1;
    margin: 0.5rem;
    padding: 2rem;
    background: $color-background-secondary;
    display: flex;
    flex-direction: column;
    justify-content: center;

    &:hover {
        transition: ease-in 0.15s;
        color: $color-background;
        background: $color-primary;
        cursor: pointer;
    }

    a {
        background-size: 0% 0%;
    }
}

section.content {
    img {
        width: auto;
        display: block;
        max-width: 540px;
        height: auto;
        margin: 40px 0;
    }

    @media screen and (max-width: $md) {
            img {
                min-width: 75vw;
                width: calc(50vw - 200px);
        }
    }

    padding-top: 0;

    .media {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-orient: horizontal;
        -webkit-box-direction: normal;
        -ms-flex-direction: row;
        flex-direction: row;
        -webkit-box-pack: justify;
        -ms-flex-pack: justify;
        justify-content: space-between;
        -webkit-box-align: start;
        -ms-flex-align: start;
        align-items: flex-start;
        width: 100%;
        margin: 3em 0;

        img {
            width: calc(100% - 2em - 300px);
            min-width: 320px;
        }

        video {
            width: calc(100% - 2em - 300px);
            min-width: 320px;
        }

        .media-caption {
            min-width: 300px;
            max-width: 300px;
            margin-left: 2em;
            line-height: 1.5em;
            font-size: 0.7em;
        }
    }
}

.project-hero {
    position: absolute;
    top: 50%;
    left: 0;
    right: 0;
    width: 40%;
    margin: 0 auto;
    -webkit-transform: translate3d(50%, -50%, 0);
    transform: translate3d(50%, -50%, 0);
    z-index: -2;
}


.footer {
    &--links {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    flex-direction: column;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    font-size: 2.25rem;

    @media screen and (min-width: $xs) {
        >* {
            &:not(:first-child) {
                margin-left: 4rem;
            }
        }
        flex-direction: row;
    }

    }
    &--link {
        margin-bottom: 2rem;
        width: fit-content;
    }
    &--container {
        max-width: 780px;
        width: 100%;
        margin: 0 auto;
        padding: 10rem 2rem 4rem;

        @media screen and (max-width: 768px) {
            padding: 6rem 1.5rem 4rem;
        }
        @media screen and (max-width: 400px) {
            padding: 4rem 1rem 3rem;
            -webkit-box-orient: vertical;
            -webkit-box-direction: normal;
            -ms-flex-direction: column;
            flex-direction: column;
        }
    }
    
}

@media screen and (min-width: 1680px) {
    .body {
        font-size: 2.75rem;
    }

    canvas.tease {
        -webkit-transform: translate3d(0, -50%, 0) scale(1.1);
        transform: translate3d(0, -50%, 0) scale(1.1);
    }

    canvas {
        -webkit-transform: translate3d(0, -50%, 0) scale(1.3);
        transform: translate3d(0, -50%, 0) scale(1.3);
    }
}

@media screen and (min-width: 768px) {
    p {
        width: 100%;
        word-wrap: normal;
    }
}

@media screen and (min-width: 400px) {
    h3 {
        width: 60%;
    }
}

@media screen and (max-width: 768px) {
    p {
        width: 100%;
    }

    section {
        padding: 3rem 1.5rem;
    }

    header {
        padding: 3rem 1.5rem;
    }

    .grid-list {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -ms-flex-direction: column;
        flex-direction: column;
    }

    .project {
        &+.project {
            margin-left: 0;
        }
    }

    section.content {
        .media {
            .media-caption {
                margin-left: 0;
                margin-top: 2em;
                max-width: none;
            }

            -webkit-box-orient: vertical;
            -webkit-box-direction: normal;
            -ms-flex-direction: column;
            flex-direction: column;
        }
    }
}

@media screen and (max-width: 400px) {
    .wrapper {
        padding: 0 0 0 1em;
        width: 90%;
        font-size: 0.8em;
    }

    section {
        padding: 2rem 1rem;
    }

    header {
        padding: 2rem 1rem;
    }

    .modal {
        width: 100%;
        padding: 2em;
    }

    canvas.tease {
        -webkit-transform: translate3d(0, -50%, 0) scale(0.8);
        transform: translate3d(0, -50%, 0) scale(0.8);
    }

    canvas {
        width: 100%;
        -webkit-transform: translate3d(0, -50%, 0) scale(1);
        transform: translate3d(0, -50%, 0) scale(1);
    }
}

